# gherkin2robotframework

./: .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.md  dumpgherkin.py  gherkin2robotframework.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-test-pypi.yml  release.yaml
examples/: .gitignore  examples.feature  examples_dutch.feature  examples_outline.feature  member_logon.feature  member_logon_with_examples.feature  test.feature
examples/sub/: test.feature
gherkin2robotframework/: __main__.py  dumpgherkin.py  translation.py
src/gherkin2robotframework/: __main__.py  translation.py
